src/projects/projects.scss
/* ... */
.breakdownModal {
    display: block;
    margin: 0 auto;
    width: 800px;
    height: 650px;
    margin-top: 70px;
    background-color: white;
    border-radius: 5px;
    overflow-y: auto;

    .topSection {
        padding: 20px 60px;
        background-color: #F1FEFF;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;

        h1 {
            color: #111;
            font-family: Lato;
            font-size: 36px;
            font-style: normal;
            font-weight: 700;
            line-height: normal;
            letter-spacing: -0.18px;
        }

        p {
            color: #333;
            font-family: Lato;
            font-size: 20px;
            font-style: normal;
            font-weight: 400;
            line-height: normal;
            letter-spacing: -0.1px;
        }

        img {
            height: 90px;
        }
    }

    .projectHeader {
        display: grid;
        grid-template-columns: 1fr 3fr;
        grid-column-gap: 30px;
        padding: 10px 40px;


        img {
            width: 80px;
            margin: auto;
        }

        h2 {
            color: #000;
            font-family: Lato;
            font-size: 27px;
            font-style: normal;
            font-weight: 700;
            line-height: normal;
            letter-spacing: -0.135px;
        }
    }

    .projectDescription {
        padding: 0px 40px 5px 40px;
        position: relative;
        bottom: 20px;
    }

    &:focus-visible {
        outline: none !important;
    }
}

.MuiModal-root .css-79ws1d-MuiModal-root {
    overflow: scroll !important;
}

@media (min-width: 1100px) {
    .projectsPage {
        .projectTypes {
            margin-top: 3rem;
            .projectType {
                width: 40%;
                margin-right: 5%;
                margin-left: 5%;
                flex-direction: row;

                .leftImage {
                    width: 20%;
                    margin-right: 30px;
                    img {
                        width: 100%;
                    }
                }

                .rightProjectDescription {
                    width: 80%;
                }
            }
        }

        .clientsSection img {
            width: 11%;
            margin-left:0%;
            margin-right: 2.3%;
            margin-bottom: 25px;
            vertical-align: middle;
        }
    }
}

@media (max-width: 1100px) {
    .projectsPage {
        // overflow-x: hidden;

        .hero {
            grid-template-columns: 5fr;
        }
        .projectTypes {
            text-align: center;

            .projectType {
                width: 100%;
                flex-direction: column;
                align-items: center;

                .leftImage {
                    width: 30%;
                    img {
                        width: 100%;
                    }
                }
            }
        }

        .waveAnchor {
            overflow-x: clip;
        }

        .projectSpectrumSection {

            .clientTypes {
                flex-direction: column;

                .clientTypeBox {
                    margin: 0;
                    padding: 20px 0px;
                    background: rgba(255, 255, 255, 0.9);
                }
            }


            
        }

        .mobileTimeline {
            .grid {
                display: grid;
                grid-template-columns: 1fr 1fr;
                grid-column-gap: 30px;
                img {
                    margin: 5px;
                    max-height: 50px;
                    width: auto;
                    max-width: 100px;
                }
            }
        }

        .clientsSection img {
            width: 30%;
            margin-left:0%;
            margin-right: 2.3%;
            margin-bottom: 25px;
            vertical-align: middle;
        }

        .backgroundWaves {
            transform: rotate(131deg);
            right: 0px;
            position: relative;
            right: 170px;
            top: 320px;

            .thickblue {
                width: 400%;
                right: 0%;

            }

            .darkblue {
                position: absolute;
                height: auto;
                width: 500%;
                right: 0%;
            }

            .thinblue {
                position: relative;
                bottom: -10px;
                height: auto;
                /* width: 400%; */
                right: 150%;
                width: 540%;
            }

            .thickblue2 {
                position: absolute;
                top: 10px;
                height: auto;
                width: 3000%;
                right: -50%;
            }
    }

   
}

.breakdownModal {
    width: 90%;

    .topSection {
        padding: 15px 30px;

        h1 {
            font-size: 1.3rem;
            margin-bottom: 10px;
            margin-top: 10px;
        }

        p {
            font-size: 1rem;
            margin: 0;
        }
    }
}
}

@media (min-width: 1440px) {
    .projectsPage .waveAnchor {
        top: 244px;
    }

    .backgroundWaves {
        width: 100%;
    }
}

